--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,29 +43,48 @@
 
             <section class="mt-8 bg-white p-8 rounded-lg shadow-lg">
                 <h2 class="text-2xl font-semibold mb-4 text-indigo-700">What You Can Do</h2>
-                <ul class="list-disc pl-5 space-y-2">
-                    <li>Upload OFX files to import your bank statements.</li>
-                    <li>Explore your finances through dashboards:
-                        <ul class="list-disc pl-5 space-y-1">
-                            <li>Yearly dashboard summarises activity for a selected year.</li>
-                            <li>All years dashboard compares trends across years.</li>
-                            <li>Monthly dashboard shows month-by-month results.</li>
-                            <li>Group dashboard analyses spending by category group.</li>
-                            <li>Account dashboard tracks balances per account.</li>
-                        </ul>
-                    </li>
-                    <li>Visualise trends with interactive graphs.</li>
-                    <li>Track spending against budgets.</li>
-                    <li>View monthly statements to review individual transactions.</li>
-                    <li>Generate detailed transaction reports.</li>
-                    <li>Search transactions to find specific payments or receipts.</li>
-                    <li>Track transfers between accounts separately.</li>
-                    <li>Organise data by managing tags, categories and groups.</li>
-                    <li>Identify untagged items via the Missing Tags page.</li>
-                    <li>Run background processes and review application logs.</li>
-                    <li>Back up and restore your data.</li>
-                    <li>Manage user accounts and log out when you're done.</li>
-                </ul>
+                <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+                    <div class="flex items-start space-x-3">
+                        <i class="fas fa-file-upload text-indigo-600 fa-2x"></i>
+                        <p class="text-gray-700">Upload OFX files to import your bank statements.</p>
+                    </div>
+                    <div class="flex items-start space-x-3">
+                        <i class="fas fa-tachometer-alt text-indigo-600 fa-2x"></i>
+                        <p class="text-gray-700">Explore dashboards for yearly, monthly and account insights.</p>
+                    </div>
+                    <div class="flex items-start space-x-3">
+                        <i class="fas fa-chart-bar text-indigo-600 fa-2x"></i>
+                        <p class="text-gray-700">Visualise trends with interactive graphs.</p>
+                    </div>
+                    <div class="flex items-start space-x-3">
+                        <i class="fas fa-robot text-indigo-600 fa-2x"></i>
+                        <p class="text-gray-700">Automatically tag transactions with AI suggestions.</p>
+                    </div>
+                    <div class="flex items-start space-x-3">
+                        <i class="fas fa-redo-alt text-indigo-600 fa-2x"></i>
+                        <p class="text-gray-700">Analyse recurring expenses to spot regular outgoings.</p>
+                    </div>
+                    <div class="flex items-start space-x-3">
+                        <i class="fas fa-layer-group text-indigo-600 fa-2x"></i>
+                        <p class="text-gray-700">Break down spending with segments and categories.</p>
+                    </div>
+                    <div class="flex items-start space-x-3">
+                        <i class="fas fa-lock text-indigo-600 fa-2x"></i>
+                        <p class="text-gray-700">Secure access with two-factor authentication.</p>
+                    </div>
+                    <div class="flex items-start space-x-3">
+                        <i class="fas fa-search text-indigo-600 fa-2x"></i>
+                        <p class="text-gray-700">Search and report on transactions in detail.</p>
+                    </div>
+                    <div class="flex items-start space-x-3">
+                        <i class="fas fa-database text-indigo-600 fa-2x"></i>
+                        <p class="text-gray-700">Back up and restore your data with ease.</p>
+                    </div>
+                    <div class="flex items-start space-x-3">
+                        <i class="fas fa-user-cog text-indigo-600 fa-2x"></i>
+                        <p class="text-gray-700">Manage user accounts, processes and logs.</p>
+                    </div>
+                </div>
             </section>
         </main>
     </div>
