--- a/frontend/group_dashboard.html
+++ b/frontend/group_dashboard.html
@@ -126,7 +126,7 @@
             title: { text: title },
             xAxis: { categories: data.map(d => d.name) },
             yAxis: { title: { text: 'Amount (£)' }, labels: { formatter: function(){ return '£' + Highcharts.numberFormat(this.value,2); } } },
-            tooltip: { pointFormatter: function(){ return '£' + Highcharts.numberFormat(this.y,2); } },
+            tooltip: { pointFormatter: function(){ return this.series.name + ': £' + Highcharts.numberFormat(this.y, 2); } },
             series: [{ name: 'Total', data: data.map(d => parseFloat(d.total)), colorByPoint: true }]
         });
     }
