--- a/frontend/account.html
+++ b/frontend/account.html
@@ -38,6 +38,15 @@
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script>
     const gradientColors = ['#4B0082', '#40826D', '#50C878', '#AAF0D1'];
+    function balanceTooltip(){
+        const prev = this.point.index > 0 ? this.series.yData[this.point.index - 1] : null;
+        let text = `Date: ${this.category}<br/>Balance: £${Highcharts.numberFormat(this.y, 2)}`;
+        if(prev !== null){
+            const delta = this.y - prev;
+            text += `<br/>Change: £${Highcharts.numberFormat(delta, 2)}`;
+        }
+        return text;
+    }
     // Format balance cells with currency and positive/negative colouring
     function balanceFormatter(cell){
         const value = cell.getValue();
@@ -68,7 +77,7 @@
                     title: { text: 'Balance Over Time' },
                     xAxis: { categories: dates },
                     yAxis: { title: { text: 'Balance (£)' }, labels: { formatter: function(){ return '£' + Highcharts.numberFormat(this.value, 2); } } },
-                    tooltip: { pointFormatter: function(){ return this.series.name + ': £' + Highcharts.numberFormat(this.y, 2); } },
+                    tooltip: { pointFormatter: balanceTooltip },
                     series: [{ name: 'Balance', data: balances, colorByPoint: true }]
                 });
             });
